syntax = "proto3";

option go_package = "module/common/users";

package users;

import "google/api/annotations.proto";

service UserService{

        rpc Get(GetRequest) returns(GetResponse) {
        	      option (google.api.http) = {
			                  get: "/users/user/{id}"
		};
        }

        rpc GetAll(GetAllRequest) returns(GetAllResponse) {
        	      option (google.api.http) = {
			                  get: "/users/user"
		};
        }

        rpc Insert(InsertUserRequest) returns (InsertUserResponse) {
                option (google.api.http) = {
                        post: "/users/user"
                        body: "user"
                };
        }

        rpc EditUser(InsertUserRequest) returns (InsertUserResponse){
                option (google.api.http) = {
                        put: "/users/user"
                        body: "user"
                };
        }

        rpc AddEducation(AddEducationRequest) returns (AddEducationResponse){
                option(google.api.http)  = {
                        put: "/users/user/education/{id}"
                        body: "education"
                };
        }

        rpc DeleteEducation(DeleteEducationRequest) returns (DeleteEducationResponse){
                option(google.api.http) = {
                        delete: "/users/education/{id}/{index}"
                };
        }
}

message GetRequest {
        string id = 1;
}

message GetResponse {
        User user = 1;
}

message GetAllRequest {
}

message GetAllResponse {
        repeated User users = 1;
}

message InsertUserRequest {
        User user = 1;
}

message InsertUserResponse {
}

message AddEducationRequest{
        Education education = 1;
        string id = 2;
}

message AddEducationResponse{

}

message DeleteEducationRequest{
        string id = 1;
        uint32 index = 2;
}

message DeleteEducationResponse{

}

message User {
        string id = 1;
        string name = 2;
        string surname = 3;
        string username = 4;
        string password = 5;
        string dateOfBirth = 6;
        string gender = 7;
        string email = 8;
        string phone = 9;
}

message Education {
        string school = 1;
        string degree = 2;
        string fieldOfStudy = 3;
        string startDate = 4;
        string endDate = 5;
        float grade = 6;
        string description = 7;
}
